PR22167, NULL pointer dereference in scan_unit_for_symbols

PR 22167
	* dwarf2.c (scan_unit_for_symbols): Check u.blk->data is non-NULL.